--- a/IEEEtran/bare_conf.tex
+++ b/IEEEtran/bare_conf.tex
@@ -650,7 +650,7 @@ Future analyses may also take further advantage of the rich Twitter API. Rather 
 % use section* for acknowledgment
 \section*{Acknowledgments}
 
-The authors would like to thank many individuals for their consultations in context with the development of this study and its ongoing work.
+The authors would like to thank our collaborators in the Georgia HIV research community, including individuals at The University of Georgia, The Center for Disease control, Oak Ridge National Laboratory, Emory University, The Georgia Department of Public Health and the Kaiser Family Foundation.
 
 
 
