fix figures for pub

--- a/IEEEtran/bare_conf.tex
+++ b/IEEEtran/bare_conf.tex
@@ -455,7 +455,7 @@ We sought to determine trends in HIV and PrEP discourse on Twitter to inform and
 % figure 1
 \begin{figure}
 \centering
-\includegraphics[scale=0.35]{figs/Fig1}
+\includegraphics[scale=0.5]{figs/Fig1}
 \caption{Plot of geolocated tweets.}
 \label{fig:map}
 \end{figure}
@@ -539,7 +539,7 @@ However, it is hard to tell from these data whether the increased level of PrEP 
 % figure 3
 \begin{figure}
 \centering
-\includegraphics[height=2.5in, width=3.5in]{figs/Fig3}
+\includegraphics[height=2.5in, width=3.5in]{figs/DTMFig3}
 \caption{DTM topic 5 (PrEP related topic) word prevalence over time. Date is YYYY-WW.}
 \label{fig:prep}
 \end{figure}
@@ -549,7 +549,7 @@ We found at least one other DTM topic that showed interesting behavior. We obser
 % figure 4
 \begin{figure}
 \centering
-\includegraphics[height=2.5in, width=3.5in]{figs/Fig4}
+\includegraphics[height=2.5in, width=3.5in]{figs/DTMFig4}
 \caption{DTM topic 4 (WorldAIDSDay related topic) word prevalence over time. Date is YYYY-WW.}
 \label{fig:aids}
 \end{figure}
@@ -563,7 +563,7 @@ We wanted to identify what Twitter users that mentioned PrEP were discussing in 
 % figure 5
 \begin{figure*}
 \centering
-\includegraphics[scale=0.5]{figs/Fig5}
+\includegraphics[height=4.5in, width=7.0in]{figs/fixFig5}
 \caption{LDA topic modeling for the top 500 users related to PrEP.}
 \label{fig:lda}
 \end{figure*}
